# nyxterm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/: README.md
.agents/skills/ai-harness/: SKILL.md
.agents/skills/architecture/: SKILL.md
.agents/skills/commit-convention/: SKILL.md
.agents/skills/culture/: SKILL.md
.agents/skills/engram-integration/: SKILL.md
.agents/skills/multiplexing/: SKILL.md
.agents/skills/nix-packaging/: SKILL.md
.agents/skills/pr-flow/: SKILL.md
.agents/skills/pty-handling/: SKILL.md
.agents/skills/theming/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  feature.md
.github/workflows/: ci.yml
docs/: keybinds.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pty-core/: Cargo.toml
src-tauri/pty-core/src/: backend.rs  da_filter.rs  error.rs  flusher.rs  lib.rs  reader.rs  session.rs  state.rs  waiter.rs
src-tauri/pty-core/tests/: integration.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/keybinds/: config.rs  mod.rs
src-tauri/src/modules/pty/: commands.rs  mod.rs
src/modules/keybinds/: config-loader.ts  defaults.ts  engine.ts  guards.ts  index.ts  normalize.ts  registry.ts  reserved.ts  resolver.ts  types.ts  validation.ts
src/modules/keybinds/__tests__/: acceptance.test.ts  config-loader.test.ts  defaults.test.ts  (+6 more)
src/modules/terminal/: TerminalPane.tsx  pty-bridge.ts  xterm-setup.ts
(+5 files in other folders)
