[workspace]
members = [".", "pty-core"]

[package]
name = "nyxterm"
version = "0.1.0"
description = "nyxterm — a fast, minimal terminal emulator"
authors = []
edition = "2021"

[lib]
name = "nyxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nyxterm-pty-core = { path = "pty-core" }
thiserror = "2"

[dev-dependencies]
